executable('rz-find', 'rz-find.c',
  include_directories: [platform_inc],
  dependencies: [
    rz_main_dep,
    rz_util_dep,
    rz_search_dep,
    rz_crypto_dep,
    rz_io_dep,
    rz_main_dep,
    rz_cons_dep
  ],
  install: true,
  install_rpath: rpath_exe,
  implicit_include_directories: false
)
