analysis_plugins_list = [
  '6502',
  '8051',
  'amd29k',
  'arm_cs',
  'avr',
  'bf',
  'chip8',
  'cil',
  'cr16',
  'dalvik',
  'ebc',
  'gb',
  'h8300',
  'hexagon',
  'i4004',
  'i8080',
  'java',
  'luac',
  'm68k_cs',
  'm680x_cs',
  'malbolge',
  'mcore',
  'mips_cs',
  'msp430',
  'null',
  'or1k',
  'pic',
  'ppc_cs',
  'propeller',
  'pyc',
  'rl78',
  'rsp',
  'snes',
  'sparc_cs',
  'spc700',
  'sysz',
  'tms320',
  #'tms320c64x',
  'v810',
  'v850',
  'wasm',
  'x86_cs',
  'xap',
  'xcore_cs',
]
if capstone_dep.version() == 'next' or capstone_dep.version().split('.')[0].to_int() > 4
  analysis_plugins_list += 'alpha_cs'
  analysis_plugins_list += 'riscv_cs'
  analysis_plugins_list += 'tricore_cs'
endif

if get_option('use_gpl')
  analysis_plugins_list += [
    'arc',
    'cris',
    'mips_gnu',
    'nios2',
    'riscv',
    'sh',
    'sparc_gnu',
    'vax',
    'xtensa',
    'z80',
  ]
endif

analysis_plugins = {
  'conf_name': 'plugins_analysis',
  'base_cname': 'rz_analysis_plugin_',
  'list': analysis_plugins_list,
}

rz_analysis_sources = [
  'analysis.c',
  'block.c',
  'cc.c',
  'class.c',
  'cond.c',
  'cycles.c',
  'data.c',
  'dwarf_process.c',
  'esil/esil.c',
  'esil/esil_interrupt.c',
  'esil/esil_sources.c',
  'esil/esil_stats.c',
  'esil/esil_trace.c',
  'fcn.c',
  'function.c',
  'hint.c',
  'il/analysis_il.c',
  'il/analysis_il_trace.c',
  'il_trace.c',
  'jmptbl.c',
  'labels.c',
  'meta.c',
  'op.c',
  'platform_profile.c',
  'platform_target_index.c',
  'reflines.c',
  'rtti.c',
  'rtti_itanium.c',
  'rtti_msvc.c',
  'serialize_analysis.c',
  'similarity.c',
  'switch.c',
  'pdb_process.c',
  'types.c',
  'value.c',
  'var.c',
  'var_global.c',
  'vtable.c',
  'xrefs.c',
  'p/analysis_6502.c',
  'p/analysis_8051.c',
  'p/analysis_amd29k.c',
  'p/analysis_arm_cs.c',
  'p/analysis_avr.c',
  'p/analysis_bf.c',
  'p/analysis_chip8.c',
  'p/analysis_cil.c',
  'p/analysis_cr16.c',
  'p/analysis_dalvik.c',
  'p/analysis_ebc.c',
  'p/analysis_gb.c',
  'p/analysis_h8300.c',
  'p/analysis_hexagon.c',
  'p/analysis_i4004.c',
  'p/analysis_i8080.c',
  'p/analysis_java.c',
  'p/analysis_luac.c',
  'p/analysis_m68k_cs.c',
  'p/analysis_m680x_cs.c',
  'p/analysis_malbolge.c',
  'p/analysis_mcore.c',
  'p/analysis_mips_cs.c',
  'p/analysis_msp430.c',
  'p/analysis_null.c',
  'p/analysis_or1k.c',
  'p/analysis_pic.c',
  'p/analysis_ppc_cs.c',
  'p/analysis_propeller.c',
  'p/analysis_pyc.c',
  'p/analysis_rl78.c',
  'p/analysis_rsp.c',
  'p/analysis_snes.c',
  'p/analysis_sparc_cs.c',
  'p/analysis_spc700.c',
  'p/analysis_sysz.c',
  'p/analysis_tms320.c',
  'p/analysis_tms320_c55x_plus.c',
  #'p/analysis_tms320c64x.c',
  'p/analysis_v810.c',
  'p/analysis_v850.c',
  'p/analysis_wasm.c',
  'p/analysis_x86_cs.c',
  'p/analysis_xap.c',
  'p/analysis_xcore_cs.c',
  #'arch/gb/meta_gb_cmt.c',
  'arch/arm/arm_esil32.c',
  'arch/arm/arm_esil64.c',
  'arch/avr/avr_esil.c',
  'arch/avr/avr_il.c',
  'arch/arm/arm_il32.c',
  'arch/arm/arm_il64.c',
  'arch/ppc/ppc_il.c',
  'arch/ppc/ppc_il_ops.c',
  'arch/ppc/ppc_il_flag_ops.c',
  'arch/sh/sh_il.c',
  'arch/x86/common.c',
  'arch/x86/x86_il.c',
  'arch/8051/8051_il.c',
  'arch/8051/8051_parse.c',
  'arch/v810/v810_il.c',
  'arch/v850/v850_il.c',
  '../asm/arch/amd29k/amd29k.c',
  '../asm/arch/avr/disassembler.c',
  '../asm/arch/cil/cil_dis.c',
  '../asm/arch/cr16/cr16_disas.c',
  '../asm/arch/ebc/ebc_disas.c',
  '../asm/arch/h8300/h8300_disas.c',
  '../asm/arch/java/jvm.c',
  '../asm/arch/mcore/mcore.c',
  '../asm/arch/msp430/msp430_disas.c',
  '../asm/arch/or1k/or1k_disas.c',
  '../asm/arch/pic/pic_midrange.c',
  '../asm/arch/ppc/libvle/vle.c',
  '../asm/arch/propeller/propeller_disas.c',
  '../asm/arch/rsp/rsp_idec.c',
  '../asm/arch/sh/disassembler.c',
  '../asm/arch/sh/lookup.c',
  '../asm/arch/tms320/tms320_dasm.c',
  '../asm/arch/tms320/c55x_plus/ins.c',
  '../asm/arch/tms320/c55x_plus/c55plus.c',
  '../asm/arch/tms320/c55x_plus/c55plus_decode.c',
  '../asm/arch/tms320/c55x_plus/decode_funcs.c',
  '../asm/arch/tms320/c55x_plus/hashtable.c',
  '../asm/arch/tms320/c55x_plus/utils.c',
  '../asm/arch/v810/v810_disas.c',
  '../asm/arch/v850/v850_disas.c',
  '../asm/arch/wasm/wasm.c',
  '../asm/arch/pyc/opcode_10.c',
  '../asm/arch/pyc/opcode_11.c',
  '../asm/arch/pyc/opcode_12.c',
  '../asm/arch/pyc/opcode_13.c',
  '../asm/arch/pyc/opcode_14.c',
  '../asm/arch/pyc/opcode_15.c',
  '../asm/arch/pyc/opcode_16.c',
  '../asm/arch/pyc/opcode_20.c',
  '../asm/arch/pyc/opcode_21.c',
  '../asm/arch/pyc/opcode_22.c',
  '../asm/arch/pyc/opcode_23.c',
  '../asm/arch/pyc/opcode_24.c',
  '../asm/arch/pyc/opcode_25.c',
  '../asm/arch/pyc/opcode_26.c',
  '../asm/arch/pyc/opcode_27.c',
  '../asm/arch/pyc/opcode_2x.c',
  '../asm/arch/pyc/opcode_30.c',
  '../asm/arch/pyc/opcode_31.c',
  '../asm/arch/pyc/opcode_32.c',
  '../asm/arch/pyc/opcode_33.c',
  '../asm/arch/pyc/opcode_34.c',
  '../asm/arch/pyc/opcode_35.c',
  '../asm/arch/pyc/opcode_36.c',
  '../asm/arch/pyc/opcode_37.c',
  '../asm/arch/pyc/opcode_38.c',
  '../asm/arch/pyc/opcode_39.c',
  '../asm/arch/pyc/opcode_310.c',
  '../asm/arch/pyc/opcode_3x.c',
  '../asm/arch/pyc/opcode_analysis.c',
  '../asm/arch/pyc/opcode_arg_fmt.c',
  '../asm/arch/pyc/opcode.c',
  '../asm/arch/pyc/pyc_dis.c',
  '../asm/arch/luac/lua_arch.c',
  '../asm/arch/luac/v54/analysis_54.c',
  '../asm/arch/luac/v54/opcode_54.c',
  '../asm/arch/luac/v53/analysis_53.c',
  '../asm/arch/luac/v53/opcode_53.c',
  '../asm/arch/rl78/rl78_instr.c',
  '../asm/arch/rl78/rl78_maps.c',
  '../asm/arch/rl78/rl78_operand.c',
  '../asm/arch/rl78/rl78.c'
]

if capstone_dep.version() == 'next' or capstone_dep.version().split('.')[0].to_int() > 4
  rz_analysis_sources += 'p/analysis_alpha_cs.c'
  rz_analysis_sources += 'p/analysis_riscv_cs.c'
  rz_analysis_sources += 'p/analysis_tricore_cs.c'
  rz_analysis_sources +='arch/tricore/tricore_il.c'
endif

if get_option('use_gpl')
  rz_analysis_sources += [
    'p/analysis_arc.c',
    'p/analysis_cris.c',
    'p/analysis_mips_gnu.c',
    'p/analysis_nios2.c',
    'p/analysis_riscv.c',
    'p/analysis_sh.c',
    'p/analysis_sparc_gnu.c',
    'p/analysis_vax.c',
    'p/analysis_xtensa.c',
    'p/analysis_z80.c',
    '../asm/arch/xtensa/gnu/xtensa-dis.c',
    '../asm/arch/xtensa/gnu/elf32-xtensa.c',
    '../asm/arch/xtensa/gnu/xtensa-isa.c',
    '../asm/arch/xtensa/gnu/xtensa-modules.c',
  ]
endif
rz_analysis_inc = [
  platform_inc,
  include_directories(
    'arch/gb',
  )
]

rz_analysis = library('rz_analysis', rz_analysis_sources,
  include_directories: rz_analysis_inc,
  dependencies: [
    rz_util_dep,
    rz_crypto_dep,
    rz_reg_dep,
    rz_syscall_dep,
    rz_search_dep,
    rz_cons_dep,
    rz_flag_dep,
    rz_hash_dep,
    rz_diff_dep,
    rz_parse_dep,
    rz_asm_dep,
    rz_bin_dep,
    rz_type_dep,
    rz_il_dep,
    capstone_dep
  ],
  install: true,
  implicit_include_directories: false,
  install_rpath: rpath_lib,
  soversion: rizin_libversion,
  version: rizin_version,
  name_suffix: lib_name_suffix,
  name_prefix: lib_name_prefix,
)

rz_analysis_dep = declare_dependency(link_with: rz_analysis,
                                include_directories: rz_analysis_inc)
meson.override_dependency('rz_analysis', rz_analysis_dep)

modules += { 'rz_analysis': {
    'target': rz_analysis,
    'dependencies': [
      'rz_util',
      'rz_crypto',
      'rz_reg',
      'rz_syscall',
      'rz_search',
      'rz_cons',
      'rz_flag',
      'rz_hash',
      'rz_diff',
      'rz_parse',
      'rz_asm',
      'rz_bin',
      'rz_type',
      'rz_il',
    ],
    'plugins': [analysis_plugins]
}}

subdir('d')
